deployment-demo/existing-traefik/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: shorty-ingress
  namespace: shorty
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`orty.sh`)  ## USE YOUR DOMAIN NAME
      kind: Rule
      middlewares:
        - name: links
      services:
        - name: ping@internal
          kind: TraefikService

  tls:
    secretName: orty-sh-tls
    # secretName: staging-orty-sh-tls
